--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
+            position: fixed;
             text-align: center;
             padding: 1em;
             background-color: #333;
