--- a/Index.html
+++ b/Index.html
@@ -24,11 +24,13 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-            position: fixed;
-            text-align: center;
-            padding: 1em;
-            background-color: #333;
-            color: #fff;
+         position: fixed;
+         left: 0;
+         bottom: 0;
+         width: 100%;
+         text-align: center;
+         background-color: #333;
+         color: #fff;
         }
     </style>
 </head>
