--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-         position: fixed;
+         position: absolute;
          left: 0;
          bottom: 0;
          width: 100%;
